--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
   <div class="blog-container">
     <div class="card">
-      <img src="C:\Users\bchai\Pictures\Screenshots\Screenshot 2025-08-05 153811.png" alt="Threat Level Australia" />
+      <img src="blog1.png.png" alt="Threat Level Australia" />
       <div class="card-content">
         <div class="card-title">Is Your AI Assistant Spilling Legal Secrets? How to Understand Data Privacy Threats</div>
         <a href="blog1.html" class="read-more">Read More &rarr;</a>
@@ -73,7 +73,7 @@
     </div>
 
     <div class="card">
-      <img src="C:\Users\bchai\Pictures\Screenshots\Screenshot 2025-08-03 212947.png" alt="Data Breach" />
+      <img src="blog2.png.png" alt="Data Breach" />
       <div class="card-content">
         <div class="card-title">Don’t Let Access Turn into a Threat: Why Role-Based Access Control (RBAC) Matters</div>
         <a href="blog2.html" class="read-more">Read More &rarr;</a>
@@ -81,4 +81,5 @@
     </div>
 
 </body>
+
 </html>
