--- a/blog1.html
+++ b/blog1.html
@@ -45,9 +45,19 @@
 
     <h2 class="text-2xl font-semibold text-blue-800 mt-10 mb-4">Final Thought</h2>
     <p class="mb-4">AI has incredible potential to transform the legal trade. But without controls on data usage, it's a liability waiting to happen. Next AI Solution must ensure its generative AI upholds people's privacy as fiercely as any human counselor would. Because in law, trust is paramount.</p>
-  </main>
+    <hr>
+<section>
+  <h2>References</h2>
+  <ul>
+    <li>Australian Cyber Security Centre. (2023). <i>Protecting data in transit and at rest</i>. <a href="https://www.cyber.gov.au" target="_blank">https://www.cyber.gov.au</a></li>
+    <li>Carlini, N., Tramer, F., Wallace, E., Jagielski, M., Herbert-Voss, A., Lee, K., ... & Erlingsson, Ú. (2021). <i>Extracting training data from large language models</i>. <a href="https://arxiv.org/abs/2012.07805" target="_blank">https://arxiv.org/abs/2012.07805</a></li>
+    <li>Dwork, C., & Roth, A. (2014). <i>The algorithmic foundations of differential privacy</i>. <a href="https://www.cis.upenn.edu/~aaroth/Papers/privacybook.pdf" target="_blank">https://www.cis.upenn.edu/~aaroth/Papers/privacybook.pdf</a></li>
+  </ul>
+</section>  
+</main>
 
  
 </body>
 </html>
+
 
