--- a/blog2.html
+++ b/blog2.html
@@ -51,9 +51,19 @@
 
     <h2 class="text-2xl font-semibold text-blue-800 mt-10 mb-4">Final Thought</h2>
     <p>Security is not paranoia. Security is guarding what's important. By implementing role-based access control, Next AI Solution can stay lean and agile while safeguarding its legal data from insider and outsider threats. Because in cybersecurity, not everyone needs a key to every door.</p>
-  </main>
+  <hr>
+<section>
+  <h2>References</h2>
+  <ul>
+    <li>OWASP Foundation. (2023). <i>OWASP Top 10: Broken Access Control</i>. <a href="https://owasp.org/www-project-top-ten/" target="_blank">https://owasp.org/www-project-top-ten/</a></li>
+    <li>Rouse, M. (2023). <i>Role-based access control (RBAC)</i>. TechTarget. <a href="https://www.techtarget.com/whatis/definition/role-based-access-control-RBAC" target="_blank">https://www.techtarget.com/whatis/definition/role-based-access-control-RBAC</a></li>
+    <li>Australian Cyber Security Centre. (2023). <i>Identity and access management essentials</i>. <a href="https://www.cyber.gov.au" target="_blank">https://www.cyber.gov.au</a></li>
+  </ul>
+</section>
+</main>
 
   
 </body>
 </html>
+
 
